Techniques for presentation, PDF generation, screenshots and notebook

--- a/presentation/devops4businessmanagers.md.html
+++ b/presentation/devops4businessmanagers.md.html
@@ -21,25 +21,32 @@
 
 class: center, middle
 
-# How to Have Fun in Government
-## Adventures with DevOps
+# An OCIO Digital Literacy Course
+## DevOps
 
 Stephen Curran, Cloud Compass Computing, Inc.
 
-.right[![Right-aligned image](https://drive.google.com/file/d/0B9VcNtK4g1vLVmNnQThZVUdyUHc/view)]
+<img src="QSL-C3I Titles Border.png" alt="Smiley face" height="189" width="344">
+
 
 ---
 
 # Agenda
 
-1. Introduction
-2. Deep-dive
-3. ...
+1. What is DevOps
+    2. From Idea to Production - what does it take?
+    3. What is the "Cloud" - _today_
+    4. Enabling Technologies - _The Buzzwords_
+5. It's about Business Value not Technology
+6. Extending the Pipeline
+    7. Monitoring, Logging, Analytics, Scaling, Security...
 
 ---
 
-# Introduction
+# What is DevOps
 
+> DevOps (a clipped compound of "software DEVelopment" and "information technology OPerationS") is a term used to refer to a set of practices that emphasize the collaboration and communication of both software developers and information technology (IT) professionals while automating the process of software delivery and infrastructure changes.[1][2] It aims at establishing a culture and environment where building, testing, and releasing software can happen rapidly, frequently, and more reliably.
+.footnote[.red.bold[*] this is from Wikipedia]
     </textarea>
     <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
     </script>
